--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <style>
         #editor {
             width: 750px;   
-            height: 670px;
+            height: 650px;
             border: 1px solid #ccc;
         }
         .highlighted-line {
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-gray-100">
 
-    <div class="h-screen flex p-4 bg-gray-100">
+    <div class="h-[650px] flex p-4 bg-gray-100">
         <!-- Left Panel -->
         <div class="flex flex-col flex-grow mr-4">
           <!-- Large Box -->
